Fixed paladin alignment issues

--- a/talent_calc/style.css
+++ b/talent_calc/style.css
@@ -172,7 +172,8 @@ header > div{
 
 .icon > img{
   
- 
+ max-width: 64px;
+ max-height:64px;
   filter: grayscale(100);
 
 }
